--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,6 @@
 
   <div id="container">
     <strong>hola colo colino aca estoy!!!</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <p>sos lo mas grande</a></p>
   </div>
 </ion-content>
