--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,12 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Javiza: Desarrollador de aplicaciones y programas web</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>hola colo colino aca estoy!!!</strong>
-    <p>sos lo mas grande</a></p>
+    <strong>poseo habilidades o experiencia en los lenguajes de programacion:</strong>
+    <p>javaScrip | Python </a></p>
   </div>
 </ion-content>
