--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,9 +12,15 @@
       <ion-title size="large">Javiza: Desarrollador de aplicaciones y programas web</ion-title>
     </ion-toolbar>
   </ion-header>
-
+</ion-content>
+<ion-col>
+  <p>javaScrip | Python </a></p>
+</ion-col>
+<ion-col>
   <div id="container">
     <strong>poseo habilidades o experiencia en los lenguajes de programacion:</strong>
     <p>javaScrip | Python </a></p>
   </div>
-</ion-content>
+</ion-col>
+ 
+
