--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,11 +14,11 @@
   </ion-header>
 </ion-content>
 
-
-  <div id="container">
-    <strong>poseo habilidades o experiencia en los lenguajes de programacion:</strong>
-    <p>javaScrip | Python </a></p>
-  </div>
-
+<ion-content> <div id="container">
+  <strong>poseo habilidades o experiencia en los lenguajes de programacion:</strong>
+  <p>javaScrip | Python </p>
+</div>
+</ion-content>
+ 
  
 
