--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Javiza: Desarrollador de aplicaciones y programas web
+      Javiza
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,8 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large"></ion-title>
+      <ion-title size="large">: Desarrollador:</ion-title>
+      
     </ion-toolbar>
   </ion-header>
 </ion-content>
