--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,24 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Javiza
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<div>
+  <ion-header [translucent]="true">
+    <ion-toolbar >
+      <ion-title >Roperia</ion-title>
+    </ion-toolbar>
+  </ion-header>
+</div>
 
 
-<ion-card>
-  <h2>jonathan bustos ramos</h2>
-</ion-card>
+  <ion-content [fullscreen]="true">
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">Inicio sesion</ion-title>
+  
+      </ion-toolbar>
+    </ion-header>
+    <div class="card-container background">
+      <app-login></app-login>
+    </div>
+  </ion-content>
 
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Bienvenido Ingresa como usuario o como administrador
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
- 
- 
 
